...
                color: const Color.fromARGB(255, 30, 116, 187)),
            ReusableTab(
              controller: _tabController,
              onTap: (v) => state.setTab(v),
            ),
            AppInputField(
              hint: 'Enter email',
              header: 'Email',
              controller: _emailController,
              onChanged: (value) => state.setEmail(value ?? ''),
            ),
            AppInputField(
              hint: 'Enter password',
              header: 'Password',
              controller: _controller,
              onChanged: (value) => state.setPassword(value),
              suffixIcon: IconButton(
                icon: const Icon(
                  Icons.copy,
...
