...
const certifications = [
  'Python for AI, Data science and Development',
  'Continous Integration and Continous Delivery',
  'Containers with Kubernetes, Docker and OpenShift',
  'Ios Development with Swift',
  'Flutter Development',
  'Backend Development'
];
const certificationUrls = [
  'https://coursera.org/verify/RSMT9G3Y2GR5',
  'https://coursera.org/verify/X276BVY8EPEU',
  'https://coursera.org/verify/5Y4V9H6W26LE',
  'https://coursera.org/verify/DRLECQUTRH5S',
...
