...
  Widget build(BuildContext context) {
    late final state = RepositoriesState();
    state.getRepository();

    return Scaffold(
      appBar: AppBar(
        title: const AppText(text: 'Github Profile'),
      ),
      body: Observer(builder: (context) {
        return SafeArea(
          minimum: EdgeInsets.all(16.r),
          child: state.isLoading
              ? const Center(
...
